--- a/docker/Dockerfile_logistics_system-noetic-cuda-11.7.1
+++ b/docker/Dockerfile_logistics_system-noetic-cuda-11.7.1
@@ -163,11 +163,24 @@ RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -sc` main" 
         ros-$ROS_DISTRO-rqt-tf-tree \
 		ros-$ROS_DISTRO-rviz \
         ros-${ROS_DISTRO}-moveit \
+		ros-$ROS_DISTRO-controller-manager \
+		ros-$ROS_DISTRO-effort-controllers \
+		ros-$ROS_DISTRO-gazebo-ros-control \
+		ros-$ROS_DISTRO-joint-state-controller \
+		ros-$ROS_DISTRO-joint-trajectory-controller \
+		ros-$ROS_DISTRO-position-controllers \
+		ros-$ROS_DISTRO-robot-state-publisher \
+		ros-$ROS_DISTRO-joint-state-publisher \
+		ros-$ROS_DISTRO-joint-state-publisher-gui \
+		ros-$ROS_DISTRO-warehouse-ros-mongo \
+		ros-$ROS_DISTRO-trac-ik-kinematics-plugin \
 		xvfb \
 	&& geographiclib-get-geoids egm96-5 \
 	&& apt-get -y autoremove \
 	&& apt-get clean autoclean \
 	&& rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+
+
 
 RUN pip3 install -U \
 		osrf-pycommon
