--- a/docker/Dockerfile_logistics_system-noetic-cuda-11.7.1
+++ b/docker/Dockerfile_logistics_system-noetic-cuda-11.7.1
@@ -216,6 +216,34 @@ RUN pip3 install ultralytics==8.0.162
 RUN pip3 install --ignore-installed Cython
 RUN pip3 install lapx>=0.5.2
 
+#
+# Install librealsense from debian
+# Ref: https://github.com/IntelRealSense/librealsense/blob/master/doc/distribution_linux.md#installing-the-packages
+#
+RUN mkdir -p /etc/apt/keyrings
+RUN curl -sSf https://librealsense.intel.com/Debian/librealsense.pgp | tee /etc/apt/keyrings/librealsense.pgp > /dev/null \
+	&& echo "deb [signed-by=/etc/apt/keyrings/librealsense.pgp] https://librealsense.intel.com/Debian/apt-repo `lsb_release -cs` main" | \
+	tee /etc/apt/sources.list.d/librealsense.list
+RUN apt-get update && apt-get -y --quiet --no-install-recommends --allow-unauthenticated install \
+	librealsense2-dkms \
+	librealsense2-utils \
+	librealsense2-dev \
+	librealsense2-dbg \
+	&& apt-get -y autoremove \
+	&& apt-get clean autoclean \
+	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN apt-get update && apt-get -y --quiet --no-install-recommends install \
+	ros-${ROS_DISTRO}-jsk-tools \
+	ros-${ROS_DISTRO}-rgbd-launch \
+	ros-${ROS_DISTRO}-image-transport-plugins \
+	ros-${ROS_DISTRO}-image-transport \
+	&& apt-get -y autoremove \
+	&& apt-get clean autoclean \
+	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# REF: https://stackoverflow.com/questions/77642155/attributeerror-module-object-has-no-attribute-raw-opt/77656642#77656642
+RUN pip3 install empy==3.3.4
+
 # create and start as LOCAL_USER_ID
 COPY scripts/entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
